# fast-fits-wcs

./: .gitignore  README.md  pyproject.toml
benchmarks/: performance.py  test_array_api.py  test_correctness.py  validate_gpu_backends.py
examples/: reproject_example.py
fast_fits_wcs/: __init__.py  celestial.py  core.py  projections.py
fast_fits_wcs/tests/: __init__.py  test_array_api.py  test_hypothesis.py
jaxwcs/: __init__.py  celestial.py  core.py
