[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "fast-fits-wcs"
dynamic = ["version"]
description = "Minimal APE 14-compliant celestial FITS WCS, optimized for JAX"
readme = "README.md"
requires-python = ">=3.10"
# numpy >= 2.0 for the array-API names (asin/atan2/...) on the main namespace;
# older numpy works too if array-api-compat is installed.
dependencies = ["jax", "numpy>=2.0"]

[project.optional-dependencies]
# astropy is only needed for the high-level (SkyCoord) APE 14 interface and the
# test/benchmark suite; the low-level numeric API works without it.
highlevel = ["astropy"]
# Robust namespace detection for cupy/torch (numpy/jax work without it).
arrayapi = ["array-api-compat"]
test = ["astropy", "reproject", "matplotlib", "hypothesis", "pytest"]

[tool.pytest.ini_options]
testpaths = ["fast_fits_wcs"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "fast_fits_wcs/_version.py"
